Fix submission bottom-padding issue on mobile

--- a/src/explorer-components/SubmissionItem/SubmissionItem.module.scss
+++ b/src/explorer-components/SubmissionItem/SubmissionItem.module.scss
@@ -1,5 +1,9 @@
 @import "~styles/variables.scss";
 
+.submissionItemRow:last-child {
+  margin-bottom: $xxl-spacing * 3;
+}
+
 .details {
   margin-top: $m-spacing;
 }
